# content_gen

./: .env.template  .gitignore  .pylintrc  Pipfile  README.md  docker-compose.dev.yml  docker-compose.yml  main.py
auth/: .env.ex  Dockerfile
auth/src/: alembic.ini  main.py
authservice/: pyproject.toml  requirements.txt
authservice/src/: alembic.ini  main.py
authservice/src/api/v1/: authorization.py
authservice/src/core/: settings.py
authservice/src/db/: base_storage.py  pg_executor.py  pg_user_tools.py
authservice/src/db/models/: users.py
authservice/src/helpers/: auth.py  tracer.py
authservice/src/migration/: env.py
authservice/src/migration/versions/: c2addcb80378_initial.py
authservice/src/schemas/: acc.py  authorization.py  loginpass.py  roles.py  users.py
authservice/src/services/: auth_service.py  base_token_service.py  jwt_service.py  password_service.py  user_service.py
authservice/src/tools/: jsontools.py
backend/: .dockerignore  Dockerfile  main.py  start.py
backend/app/: main.py
backend/core/: routers.py
collector/: main.py  tasks.py
commons/: alembic.ini  config.py  db.py  models.py  utils.py
commons/core/: api.py  image_core.py  text_core.py
commons/migrations/: env.py
core/: api.py
dockerization/: Dockerfile.auth  Dockerfile.nginx
docs/: scheme.puml
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  (+4 more)
image_core/: Dockerfile  requirements.txt
neuralapi/: requirements.txt
nginx/: Dockerfile  nginx_poxi.conf
post_generator/: main.py
text_core/: Dockerfile  main.py  routes.py
(+196 files in other folders)
