[tool.poetry]
name = "authservice"
version = "0.1.0"
description = "fastapi service for auth"
authors = ["ortariot <ortariot@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
redis = "4.6.0"
fastapi = "0.111.0"
fastapi-limiter = "0.1.5"
orjson = "3.9.10"
pydantic = "2.3.0"
pydantic-settings = "2.0.3"
uvicorn = "0.23.2"
uvloop = "0.19.0"
httptools = "0.6.1"
SQLAlchemy = "2.0.23"
alembic = "1.12.1"
werkzeug = "3.0.1"
PyJWT = "2.8.0"
passlib = "1.7.4"
asyncpg = "0.29.0"
Authlib = "1.3.0"
opentelemetry-api = "1.22.0"
opentelemetry-sdk = "1.22.0"
opentelemetry-instrumentation-fastapi = "0.43b0"
opentelemetry-exporter-jaeger = "1.21.0"
itsdangerous = "2.1.2"
httpx = "0.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
